<resources>
    <string name="app_name">Abastecimento Econômico</string>
    <string name="alcool">Álcool</string>
    <string name="gasolina">Gasolina</string>
    <string name="headline_calcular_combustivel">Calcule qual combústivel sai mais barato:</string>
    <string name="prefixo_valor_dinheiro">R$</string>
    <string name="logo">logo</string>
    <string name="hint_edit_text_dinheiro">0.0</string>
    <string name="veiculo">Veículo</string>
    <string name="kms_litro">Kms/Litro</string>
    <string name="calcular">CALCULAR</string>
    <string name="basico">Básico</string>
    <string name="alcool_ou_gasolina">Álcool ou Gasolina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_edit_text_kmsLitro">0.0</string>
    <string name="descricao_alerta_calculo_por_basico">Atenção! O calculo básico tem como base 70% do rendimento do álcool sobre a gasolina, talves essa métrica não se aplica ao seu veículo..</string>
    <string name="atencao">Atenção</string>
    <string name="radio_preco_gasolina">Gasolina R$%.3f</string>
    <string name="radio_preco_alcool">Álcool R$%.3f</string>
    <string name="infomr_o_preco_gasolina">Informe o preço da gasolina</string>
    <string name="informe_preco_alcool">Informe o preço do álcool.</string>
    <string name="valor_dinheiro">R$%.2f</string>
    <string name="preco_km">Preço Km</string>
    <string name="total_kms">Total KMs</string>
    <string name="total_pagar">Total Pagar</string>
    <string name="total_a_pagar">Total a pagar:</string>
    <string name="valor_total_economizado">Valor total economizado:</string>
    <string name="diferenca">Diferença</string>
    <string name="dinheiro_vazio">R$0.0</string>
    <string name="abastecimentos">Abastecimentos</string>
    <string name="pesquisar">Buscar</string>
    <string name="data_hora">dd/MM/yyyy hh:mm</string>
    <string name="porcent_sobre_gasolina">%/Gasolina</string>
    <string name="alcool_sobre_gasolina">Álcool %.2f%s</string>
    <string name="detalhe_resumo_abastecimento">%s: Litros %.2f \nTotal: R$%.2f | Economia: R$%.2f</string>
    <string name="abastecer">Abastecer</string>
    <string name="mks_por_litro">KMs/Litro</string>
    <string name="tipo_calculo">Tipo Calculo</string>
    <string name="descricao">descrição</string>
    <string name="exemplo_data_hora">25/01/2021 10:11</string>
    <string name="exemplo_resumo_abastecimento">Abastecido com Álcool: Litros 48.7 \nTotal: R$348,35 | Economia: R$ 35,7</string>

    <string name="erro_ao_salvar_abastecimento">Erro ao salvar abastecimento</string>
    <string name="abastecimento_salvo_com_sucesso">Abastecimento salvo com sucesso!</string>
    <string name="carro">Carro</string>
    <string name="moto">Moto</string>
    <string name="cidade">Cidade</string>
    <string name="rodovia">Rodovia</string>
    <string name="adicionar_veiculo">Adicionar Veículo</string>
    <string name="kms_litro_de_gasolina">Kms/Litro de Gasolina</string>
    <string name="kms_litro_de_lcool">Kms/Litro de álcool</string>
    <string name="form_error_addEditVeiculo__veiculo_nao_informado">Selecione o tipo(Carro ou Moto) de veículo.</string>
    <string name="form_error_addEditVeiculo__nome_veiculo_nao_informado">Nome de identificação do veículo não informado.</string>
    <string name="form_error_addEditVeiculo__kmsAlcoolCidade_nao_informado">Não informado: Kms/Litro de alcool na cidade.</string>
    <string name="form_error_addEditVeiculo__kmsAlcoolRodovia_nao_informado">Não informado: KMs/Litro de álcool na rodovia.</string>
    <string name="form_error_addEditVeiculo__kmsGasolinaCidade_nao_informado">Não informado: KMs/Litro de gasolina na cidade</string>
    <string name="form_error_addEditVeiculo__kmsGasolinaRodovia_nao_informado">Não informado: KMs/Litro de gasolina na rodovia</string>
    <string name="erro_ao_salvar_veiculo">Erro ao salvar veículo</string>
    <string name="nom_de_veiculo_ja_cadastrado">Este nome de identificação de veículo já está cadastrado.</string>
    <string name="veiculos">Veículos</string>
    <string name="title_activity_veiculos">VeiculosActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="cadastrados">Cadastrados</string>
    <string name="atualizar_veiculo">Atualizar Veículo</string>
    <string name="icone_veiculo">icone veiculo</string>
    <string name="msg_alerta_enviar_veiculo_para_lixeira">Todos os abastecimentos desse veículo serão removidos. Ao restaurar este veículo da lixeira, todos os seus abastecimentos tambem serão resautrados.</string>
    <string name="acao_irreversivel">Ação irreversível</string>
    <string name="confirma_deletar">Confirma deletar: </string>
    <string name="msg_alerta_deletar_veiculo_permanentemente">\n\n Ao deletar este veículo, ele e seus abastecimentos não poderão ser mais restaurados.</string>
    <string name="erro_ao_deletar_veiculo">Erro ao deletar o veículo</string>
    <string name="restaurar_veiculo">Restaurar veículo</string>
    <string name="confirma_restaurar_veiculo_da_lixeira">Veículo: %s</string>
    <string name="restaurar">Restaurar</string>
    <string name="erro_ao_restaurar_veiculo">Erro ao restaurar veículo</string>
    <string name="veiculo_restaurado_com_sucesso">Veículo restaurado com sucesso!</string>
    <string name="litros_nao_informados">Total de litros não informado!</string>
    <string name="descricao_abastecimento_por_kmsLitro">%.2fKMs/litro Álcool - %.2fKMs/litro Gasolina</string>
    <string name="remover">remover</string>
    <string name="erro_ao_remover_abastecimento">Erro ao remover abastecimento!</string>
    <string name="confirma_remover_veiculo">Veículo: %s </string>
    <string name="remover_veiculo">Remover Veiculo</string>
    <string name="erro_ao_remover_veiculo">Erro ao remover o veículo</string>
    <string name="confirmar_remover">Confirmar remover</string>
    <string name="atencao_">Atenção!</string>
    <string name="cancelar">cancelar</string>
    <string name="hint_busca">Pesquisar e filtrar abastecimentos</string>
    <string name="filtrar_abastecimento">@string/app_name</string>
    <string name="remover_abastecimento">Remover Abastecimento!</string>
    <string name="confirma_remover_abastecimento">Abastecimento feito em %s</string>
    <string name="abasteciment_removido_com_sucesso">Abastecimento removido com sucesso!</string>
    <string name="grafico">Gráfico</string>
    <string name="gastos">Gastos</string>
    <string name="economias">Economias</string>
    <string name="total_economizado_chart">Total Economizado: R$%.2f</string>
    <string name="total_gasto_chart">Total Gasto: R$%.2f</string>
    <string name="ano_anterior">ano anterior</string>
    <string name="proximo_ano">próximo ano</string>
    <string name="por_favor_informe_este_erro_ao_desenvolvedor">\n Por favor, informe este erro ao desenvolvedor.</string>
    <string name="erro_ao_salvar">Erro ao salvar</string>
    <string name="sucesso">Sucesso</string>
    <string name="ok">OK</string>
    <string name="titulo_calcular_abastecimento">Abastecer com Álcool ou Gasolina?</string>
    <string name="preco_alcool">Preço Álcool</string>
    <string name="preco_gasolina">Preço gasolina</string>
    <string name="titulo_abastecer">Abastecer:</string>
    <string name="todos_os_veiculos">Todos os veículos..</string>
    <string name="kms_litro_gasolina">KMs/Litro Gasolina</string>
    <string name="kms_litro_alcool">KMs/litro Álcool</string>
    <string name="detalhe_veiculo_docalculo_basico">Básico %.2f%s/Gasolina</string>
    <string name="detalhe_veiculo_calculo_kmslitro">KMs/Litro: Álcool %.2f | Gasolina %.2f</string>
    <string name="detalhe_veiculo_calculo_veiculo">%s:\n kms álcool %.1f/%.1f | kms gasolina %.1f/%.1f</string>
    <string name="combustivel_nao_informado">Combústível não informado!</string>
    <string name="total_litros_nao_informado">Total de litros não informado!</string>
    <string name="nome_de_identifica_o_do_ve_culo">Nome de identificação do veículo:</string>
    <string name="exemplo_jos_fiat_mobi_drive">Exemplo: José - Fiat Mobi Drive</string>
    <string name="_0_0">0.0</string>
    <string name="salvar">Salvar</string>
    <string name="ano_exemplo">2021</string>
    <string name="meu_trocar_tema">Dia/noite</string>
    <string name="menu_dia_noite">dia/noite</string>
    <string name="Sobre">Sobre</string>
    <string name="sobre_app">Versão do app 1.0.10 \n\nAplicativo calculadora de economia e gerenciamento de gastos com combústiveis. \n\nDesenvolvedor: Francisco S. Filho \nContato: franciecode@gmail.com</string>

    <string-array name="meses_chart">
        <item>jan</item>
        <item>fev</item>
        <item>mar</item>
        <item>abr</item>
        <item>mai</item>
        <item>jun</item>
        <item>jul</item>
        <item>ago</item>
        <item>set</item>
        <item>out</item>
        <item>nov</item>
        <item>dez</item>
    </string-array>
    <string-array name="filtrar_grafico">
        <item>todos</item>
        <item>veículos</item>
        <item>Kms/Litro</item>
        <item>Básico</item>
    </string-array>
</resources>