<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_dia_noite"
        android:title="@string/menu_dia_noite" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/pesquisar"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_chart"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/grafico"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_abastecer"
        android:title="@string/abastecer" />
    <item
        android:id="@+id/menu_veiculos"
        android:title="@string/veiculos" />
    <item
        android:id="@+id/menu_abastecimentos"
        android:title="@string/abastecimentos" />
</menu>