<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".activities.AddEditVeiculoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padd">

        <RadioGroup
            android:id="@+id/radioGroupVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_space"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCarro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_directions_car_24"
                android:text="@string/carro"
                android:drawableStart="@drawable/ic_baseline_directions_car_24" />

            <RadioButton
                android:id="@+id/radioButtonMoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_motorcycle_solid"
                android:text="@string/moto"
                tools:ignore="RtlHardcoded" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_de_identifica_o_do_ve_culo" />

        <EditText
            android:id="@+id/editTextNomeVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_space"
            android:hint="@string/exemplo_jos_fiat_mobi_drive"
            android:inputType="text"
            android:autofillHints="" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_space">

            <TableRow>

                <View />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/cidade"
                    android:textStyle="bold" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/rodovia"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/kms_litro_de_lcool" />

                <EditText
                    android:id="@+id/editTextKmsAlcoolCidade"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/_0_0"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    />

                <EditText
                    android:id="@+id/editTextKmsAlcoolRodovia"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/_0_0"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" />

            </TableRow>

            <TableRow>

                <TextView android:text="@string/kms_litro_de_gasolina" />

                <EditText
                    android:id="@+id/editTextKmsGasolinaCidade"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/_0_0"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/editTextKmsGasolinaRodovia"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/_0_0"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" />

            </TableRow>


        </TableLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/grid_space">

            <Button
                android:id="@+id/buttonSaveVeiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCancelSaveVeiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                app:backgroundTint="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</ScrollView>