<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/grid_small"
    android:orientation="vertical"
    android:padding="@dimen/grid_space">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/grid_space">

        <TextView
            android:id="@+id/tipoCalculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/tipo_calculo" />

        <TextView
            android:id="@+id/dataAbastecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/exemplo_data_hora"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/descricaoAbastecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipoCalculo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_grid"
            android:text="@string/descricao"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/detalhesAbastecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descricaoAbastecimento"
            android:layout_marginTop="@dimen/small_grid"
            android:gravity="center_horizontal"
            android:text="@string/exemplo_resumo_abastecimento"
            android:textSize="@dimen/text_body_medium"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>